--- a/Logo Site(s).html
+++ b/Logo Site(s).html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Celebrity Bloggers</title>
+    <style>
+        img{
+            border-radius: 5%;
+        }
+        h1{
+            border: 2px double black;
+            color: gold;
+            text-shadow: 1px 1px 4px #000000;
+            padding: 1%;
+        }
+        body{
+            margin: 0%;
+        }
+    </style>
 </head>
 
 <body>
