--- a/Logo Site(s).html
+++ b/Logo Site(s).html
@@ -10,13 +10,20 @@
             border-radius: 5%;
         }
         h1{
-            border: 2px double black;
             color: gold;
             text-shadow: 1px 1px 4px #000000;
             padding: 1%;
+            background-color: rgba(0, 255, 255, 0.505);
+            margin-left: 0%;
+            margin-right: 0%;
+            border-width: 0px;
         }
         body{
-            margin: 0%;
+            background-image: url("https://images.pexels.com/photos/235985/pexels-photo-235985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500");
+            color: white;
+        }
+        .content{
+            font-style: italic;
         }
     </style>
 </head>
@@ -28,6 +35,7 @@
                 width="300px" height="300px" /></a>
         <h1><u>CELEBRITY BLOGGERS</u></h1>
     </center>
+    <div class="content">
     <p align="justify"><b>This a website developed by Sai Kauhsik with the guidence and training of experts at Codegnan
             Institute.
             This website was created as an experiment on how the html works. In the futures this website could be
@@ -37,14 +45,15 @@
             German, Greek, Gujarati, Hebrew, Hindi, Hungarian, Icelandic, Indonesian, Italian, Japanese, Kannada,
             Korean, Latvian, Lithuanian, Malay, Malayalam, Marathi, Norwegian, Persian, Polish, Portuguese (Brazil),
             Portuguese (Portugal), Romanian, Russian, Serbian, Slovak, Slovenian, Spanish (Latin America), Spanish
-            (Spain), Swahili, Swedish, Tamil, Telugu, Thai, Turkish, Ukrainian, Urdu, Vietnamese, and Zulu.[17].
+            (Spain), Swahili, Swedish, Tamil, Telugu, Thai, Turkish, Ukrainian, Urdu, Vietnamese, and Zulu.
             Further it can be developed even more.</b></p>
-    <br>
+            <p><b>We love our celebrities, and we want to know just about everything that’s happening in their lives. Usually, we rely on tabloids to get sensational information about their lives, but many of them are now sharing controlled information about their lives with the public through their social media platforms and with the help of public image consultants. A select few use blogging as a means to share events that are happening in their life and build their personal brand. Those are the ones we will focus on in this article. In this web page, we will share a list of the most popular celebrity bloggers on the planet and also explain the motivation and core focus of their blogs. Celebrity bloggers are people who became famous as a result of their accomplishments in their industry or field of discipline, such as music, film, politics, science, business, sports, writing, etc. Celebrity bloggers are usually famous before they start blogging, although some exceptions become celebrities because of the popularity or notoriety of their blogs. This also explains how celebrities differ from influencers. Influencers gained popularity because the content they produce on their social profiles gained such authority in their niche that they were able to build a dedicated group of followers. Celebrity bloggers aren’t relying on their content to become famous; they already are. Their stardom means there is an army of fans that are always ready to read anything they post on their blogs, and for business owners, this could be an opportunity to work with a celebrity to help promote your product to their audience. While many of the celebs on this list post about their lives, they also use their blogs as a medium to share their passions and business interests with their readers.</b></p>
     <br>
     <h4><u>Contact Info</u></h4>
     <p>Email : celeblogr@gmail.com</p>
     <p>Phone : +91 1234696969</p>
     <p>Address : 123/Q, Road no. 69, XYZ Colony, Noida, Telhi</p>
+    </div>
 </body>
 
 </html>
