--- a/instagram dupe.html
+++ b/instagram dupe.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Duplicate</title>
     <style>
+
         body {
             margin: 0%;
             padding: 0%;
@@ -53,8 +54,8 @@
             background-color: 1px solid rgba(128, 128, 128, 0.2);
             background: rgba(128, 128, 128, 0.2);
             position: absolute;
-            left: 9%;
-            top: 75.5%;
+            left: 10%;
+            top: 71%;
         }
 
         .or p::after {
@@ -65,8 +66,8 @@
             background-color: 1px solid rgba(128, 128, 128, 0.2);
             background: rgba(128, 128, 128, 0.2);
             position: absolute;
-            right: 9%;
-            top: 75.5%;
+            right: 10%;
+            top: 71%;
         }
 
         .or {
@@ -109,6 +110,12 @@
             color: #0095f6;
         }
 
+        .box p{
+            position: absolute;
+            left: 25%;
+            top: 20%;
+        }
+
         .bottom {
             text-align: center;
             font-weight: thinner;
@@ -143,7 +150,7 @@
             left: 24%;
         }
 
-        .tlinks a{
+        .tlinks a {
             color: rgba(128, 128, 128, 1);
             font-family: Arial, Helvetica, sans-serif;
             text-decoration: none;
@@ -151,10 +158,31 @@
             font-size: smaller;
         }
 
-        .tlinks{
-            position: absolute;
-            left: 10%;
+        .tlinks {
+                position: absolute;
+                left: 25%;
+                top: 90%;
+                width: 60%;
 
+        }
+
+        .tlinks :hover{
+            text-decoration: underline;
+        }
+
+        .drop select {
+            border: none;
+            color: rgba(128, 128, 128, 1);
+            width: 70px;
+            display: inline;
+        }
+
+        .drop {
+            color: rgba(128, 128, 128, 1);
+            position: absolute;
+            left: 41%;
+            bottom: 1%;
+            font-size: 15px;
         }
     </style>
 </head>
@@ -189,19 +217,31 @@
     <img src="microsoft.png" alt="microsoft image" class="img2" />
     <img src="insta phone.png" alt="instagram phone" class="img3" />
     <div class="tlinks">
-        <a href="">Meta</a>
-        <a href="">About</a>
-        <a href="">Blog</a>
-        <a href="">Jobs</a>
-        <a href="">Help</a>
-        <a href="">API</a>
-        <a href="">Privacy</a>
-        <a href="">Terms</a>
-        <a href="">Locations</a>
-        <a href="">Instagram Lite</a>
-        <a href="">Threads</a>
-        <a href="">Contact Uploading & Non-Users</a>
-        <a href="">Meta Verified</a>
+            <a href="">Meta</a>
+            <a href="">About</a>
+            <a href="">Blog</a>
+            <a href="">Jobs</a>
+            <a href="">Help</a>
+            <a href="">API</a>
+            <a href="">Privacy</a>
+            <a href="">Terms</a>
+            <a href="">Locations</a>
+            <a href="">Instagram Lite</a>
+            <a href="">Threads</a>
+            <a href="">Contact Uploading & Non-Users</a>
+            <a href="">Meta Verified</a>
+    </div>
+    <div class="drop">
+        <p>
+            <select>
+                <option value="English">English</option>
+                <option value="Hindi">Hindi</option>
+                <option value="Filipino">Filipino</option>
+                <option value="French">French</option>
+                <option value="Polski">Polski</option>
+            </select>
+            © 2024 Instagram from Meta
+        </p>
     </div>
 </body>
 
